--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/bXy2kDNi/";
+    const URL = "https://teachablemachine.withgoogle.com/models/rLMD12WTS/";
 
     let model, webcam, labelContainer, maxPredictions;
 
