--- a/color/index.html
+++ b/color/index.html
@@ -1,3 +1,24 @@
-<html>
-  <p>set up now...</p>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <title>マーク認識</title>
+</head>
+
+<body>
+    <h2>マーク認識</h2>
+    <div id="webcam-container"></div>
+    <div id="label-container"></div>
+    <div>
+        <div id="color-container"></div>
+    </div>
+</body>
+
 </html>
+<script type="text/javascript" src="./index.js"></script>
