--- a/color/index.html
+++ b/color/index.html
@@ -18,6 +18,17 @@
     <div>
         <div id="color-container"></div>
     </div>
+	<ul>
+		<li>
+			対応するマーク
+		</li>
+		<li>
+			車いす
+		</li>
+		<li>
+			赤ちゃんマーク
+		</li>
+	</ul>
 </body>
 
 </html>
